header alignment fix.

--- a/assets/stylesheets/layout/_header.scss
+++ b/assets/stylesheets/layout/_header.scss
@@ -49,10 +49,6 @@
     margin: 4.8em 0 0.1em 0;
 
     @include breakpoint($mq-small) {
-      margin-top: 4.5em;
-    }
-
-    @include breakpoint($mq-extra-small) {
       margin-top: 3.8em;
     }
   }
